2007-10-03 [colin]	0.15.2cvs5

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_viewer.c
		Fix warnings

2007-10-03 [colin]	0.15.2cvs4

	* configure.ac
		Fix missing type checks

2007-09-20 [paul]	0.15.2cvs3

	* po/it.po
		updated by Andrea Spadaccini

2007-09-03 [colin]	0.15.2cvs2

	* src/gtkhtml2_viewer.c
		Add Zoom in/out to context menu

2007-09-03 [colin]	0.15.2cvs1

	* po/zh_CN.po
		Fix breakage

2007-09-03 [paul]	0.15.2

	0.15.1 released

2007-09-03 [paul]	0.15.1cvs6

	* po/ca.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/zh_CN.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Flammie Pirinen, Pader Rezso, Ralph Young

2007-08-16 [paul]	0.15.1cvs5

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-23 [colin]	0.15.1cvs4

	* src/gtkhtml2_viewer.c
		Fix license

2007-07-11 [colin]	0.15.1cvs3

	* COPYING
	* src/gettext.h
	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_prefs.h
	* src/gtkhtml2_viewer.c
		Upgrade to GPLv3 or later

2007-07-07 [paul]	0.15.1cvs2

	* po/fi.po
		updated by Flammie Pirinen

2007-07-03 [colin]	0.15.1cvs1

	* po/zh_CN.po
		Fix msgfmt error

2007-07-03 [paul]	0.15.1

	0.15.1 released

2007-07-03 [paul]	0.15.0cvs3

	* configure.ac
	* po/zh_CN.po
		added by Ralgh Young
	* po/hu.po
		updated by Pader Rezso

2007-06-21 [colin]	0.15.0cvs2

	* src/gtkhtml2_viewer.c
		Update plugin API
		Fix crash caused by 0.15.0cvs1
		Fix display of images when offline, but
		they're in cache

2007-06-20 [colin]	0.15.0cvs1

	* src/gtkhtml2_viewer.c
		Fix blinking of the last viewed html part

2007-04-16 [paul]	0.15.0

	0.15 released

2007-04-16 [paul]	0.14.2cvs11

	* po/ca.po
	* po/es.po
	* po/hu.po
	* po/pt_BR.po
	* po/sr.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Pader Rezso, Frederico Goncalves Guimaraes, and
		Aleksandar Urosevic

2007-04-07 [colin]	0.14.2cvs10

	* src/gtkhtml2_viewer.c
		Don't translate mime-type, thanks to 
		Pascal Terjan

2007-03-21 [colin]	0.14.2cvs9

	* src/gtkhtml2_viewer.c
		Fix busy cursor after cancelling load
