@@ -1,3 +1,8 @@
+2007-10-04 [colin]	0.15.2cvs6
+
+	* src/gtkhtml2_prefs.c
+		Verify success on writes
+
 2007-10-03 [colin]	0.15.2cvs5
 
 	* src/gtkhtml2_prefs.c
